--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <app-root></app-root>
-  <!-- <script src="src\assets\js\loginjs.js"></script> -->
+   <script src="assets/js/loginjs.js"></script> 
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/templatemo.js"></script>
   <script src="assets/js/custom.js"></script>
