--- a/src/index.html
+++ b/src/index.html
@@ -16,16 +16,20 @@
   <link rel="stylesheet" href="assets/css/custom.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
+
   <!-- Load fonts style after rendering the layout styles -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap">
   <link rel="stylesheet" href="assets/css/fontawesome.min.css">
+
+  <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet" />
+  <link href="https://cdn.syncfusion.com/ej2/20.3.56/ej2-dropdowns/styles/material.css" rel="stylesheet" />
+
 </head>
 <body>
   <app-root></app-root>
-   <script src="assets/js/loginjs.js"></script> 
+   <script src="assets/js/loginjs.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/templatemo.js"></script>
   <script src="assets/js/custom.js"></script>
-  
 </body>
 </html>
